# institute_admin

./: .gitignore  README.md  ecosystem.config.cjs
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260617_2105-2ef8f12a721c_initial_schema.py  20260618_0837-3348fb60d838_add_name_to_times.py  20260618_1812-95e9a23c5d27_add_daily_records_table.py  20260619_1149-886108024f77_add_scoring_settings_table.py  20260622_1200-a3f9b8c2d1e4_add_excused_absence.py  20260622_1400-b5d2e7f3a8c1_add_revision_points.py  20260622_1600-c8d3e4f5a9b2_add_problems_and_junction.py
backend/src/institute_administration/: __init__.py  main.py
backend/src/institute_administration/api/: __init__.py  app.py  dependencies.py  error_handlers.py  scoping.py
backend/src/institute_administration/api/v1/: health.py  router.py
backend/src/institute_administration/core/: __init__.py  config.py  logging.py  security.py
backend/src/institute_administration/infrastructure/: __init__.py
backend/src/institute_administration/infrastructure/database/: __init__.py  base.py  metadata.py  mixins.py  seed.py  session.py  unit_of_work.py
backend/src/institute_administration/modules/: README.md  __init__.py
backend/src/institute_administration/modules/analytics/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/daily_records/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/halaqah_types/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/halaqahs/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/identity/: __init__.py  dependencies.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/problems/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/scoring/: __init__.py  models.py  repository.py  router.py  schemas.py
backend/src/institute_administration/modules/students/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/teachers/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/modules/times/: __init__.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/institute_administration/shared/: __init__.py
backend/src/institute_administration/shared/application/: __init__.py  command.py  exceptions.py  pagination.py  query.py  sentinels.py  unit_of_work.py
backend/src/institute_administration/shared/domain/: __init__.py  aggregate_root.py  domain_event.py  (+3 more)
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_daily_records_domain.py  test_domain_primitives.py  test_value_objects.py
(+111 files in other folders)
